zeit.addcentral changes
=======================

1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2012-03-06)
------------------

- Provide name of interface in dummy add context to make debugging easier.


1.0.1 (2011-11-13)
------------------

- Fix brown bag release.


1.0.0 (2011-11-13)
------------------

- Made Ressort optional (for #9133).

- Make add location configurable via an adapter (#9133)


0.2.1 (2010-08-09)
------------------

- Using versions from the ZTK.

- Adapt for test changes in zeit.cms.

- Use ``gocept.selenium`` for Selenium tests (#7549).


0.2 (2009-08-21)
----------------

- Filter Subressort again (#6016).


0.1 (2009-08-17)
----------------

- first release.